test/corpus/entity_empty.sdm
=============
Entity, Empty
=============

module Campaign is

  entity Campaign
  
end

---

(module
  name: (identifier)
  body: (module_body
          (entity_def
            name: (identifier))))
