test/corpus/entity_with_groups.sdm
===================
Entity, With Groups
===================

module Campaign is

  entity Campaign is
    identity id -> xs:string

    group
      a -> xsd:string
    end

    group
      b -> xsd:integer
    end

  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (entity_def
        name: (identifier)
        body: (entity_body
          identity: (entity_identity
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (qualified_identifier
                  module: (identifier)
                  member: (identifier)))))
          (member_group
            (member
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (qualified_identifier
                    module: (identifier)
                    member: (identifier))))))
          (member_group
            (member
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (qualified_identifier
                    module: (identifier)
                    member: (identifier)))))))))))
