test/corpus/entity_with_members.sdm
====================
Entity, With Members
====================

module Campaign is

  entity Campaign is

    identity id -> xs:string

    a -> xsd:string
    b -> xsd:integer

  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (entity_def
        name: (identifier)
        body: (entity_body
          (entity_identity
            identity: (member
              (member_def
                name: (identifier)
                target: (type_reference
                  (identifier_reference
                    (qualified_identifier
                      module: (identifier)
                      member: (identifier)))))))
          (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (qualified_identifier
                    module: (identifier)
                    member: (identifier))))))
          (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (qualified_identifier
                    module: (identifier)
                    member: (identifier)))))))))))
