test/corpus/entity_with_unknowns.sdm
=================================
Entity, With Unknown Member Types
=================================

module Campaign is

  entity Campaign is

    identity id -> unknown

    a -> unknown

  end

end

---

    (module
      (identifier)
      (module_body
        (definition
          (entity_def
            (identifier)
            (entity_body
              (entity_identity
                (member
                  (member_def
                    (identifier)
                    (type_reference
                      (unknown_type)))))
              (member
                (member_def
                  (identifier)
                  (type_reference
                    (unknown_type)))))))))
