test/corpus/enum_empty.sdm
============
Enum, Empty
============

module corpus_test_enum is

  enum NameKind

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (enum_def
        name: (identifier)))))
