test/corpus/enum_variants.sdm
===================
Enum, With Variants
===================

module corpus_test_enum is

  enum NameKind of
    Internal
    External
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (enum_def
        name: (identifier)
        body: (enum_body
          (value_variant
            name: (identifier))
          (value_variant
            name: (identifier)))))))
