test/corpus/event_empty.sdm
============
Event, Empty
============

module campaign is

  event NameChanged source Campaign
  
end

---

(module
  name: (identifier)
  body: (module_body
    (type_def
      (event_def
        name: (identifier)
        source: (identifier_reference
           (identifier))))))
