test/corpus/event_with_source_and_members.sdm
==============================
Event, With Source and Members
==============================

module corpus_test_event is

  event NameChanged is
    source Campaign with [ name title status ]
  end

end

---

(module
  (identifier)
  (module_body
    (event_def
      (identifier)
      (event_body
        (source_entity
          (identifier_reference
            (identifier))
          (mixin_with_members
            (mixin_member
              (identifier))
            (mixin_member
              (identifier))
            (mixin_member
              (identifier))))))))
