test/corpus/feature_set_and_members.sdm
========================
Feature Set, AND Members
========================

module example is

  features Engine {and} is
    entry -> FourCylinder
    luxury -> SixCylinder
    sports -> SizCylinderTurbo
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (feature_set_def
        name: (identifier)
        body: (feature_set_conjunctive_body
          (role_by_value
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (identifier))))
          (role_by_value
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (identifier))))
          (role_by_value
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (identifier)))))))))
