test/corpus/feature_set_empty.sdm
==================
Feature Set, Empty
==================

module example is

  features Engine

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (feature_set_def
        name: (identifier)))))
