test/corpus/feature_set_xor_members.sdm
========================
Feature Set, XOR Members
========================

module example is

  features Engine {xor} of
    FourCylinder
    SixCylinder
    SizCylinderTurbo
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (feature_set_def
        name: (identifier)
        body: (feature_set_exclusive_disjunction_body
          (type_variant
            name: (identifier_reference
              (identifier)))
          (type_variant
            name: (identifier_reference
              (identifier)))
          (type_variant
            name: (identifier_reference
              (identifier))))))))
