test/corpus/from_definition_single_name.sdm
=================================
From Definition, with single name
=================================

module corpus_test_from_definition is

  structure Example is
    from Source with name
  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (from_definition_clause
            (identifier_reference
              (identifier))
            (identifier)))))))
