test/corpus/from_definition_wildcard.sdm
==============================
From Definition, with wildcard
==============================

module corpus_test_from_definition is

  structure Example from Source with _

end

---

(module
  name: (identifier)
  body: (module_body
    (structure_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (mixin_with_members
          wildcard: (wildcard))))))
