test/corpus/from_definition_without_single_name.sdm
====================================
From Definition, without single name
====================================

module corpus_test_from_definition is

  structure Example from Source without name

end

---

(module
  name: (identifier)
  body: (module_body
    (structure_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_without
          member: (identifier))))))
