test/corpus/import_member_only.sdm
====================
Import single member
====================

module Campaign is

  import xsd:base
  
end

---

(module
  name: (identifier)
  body: (module_body
    (import
      (member_import
        name: (qualified_identifier
          module: (identifier)
          member: (identifier))))))
