test/corpus/import_module_from.sdm
=========================
Import single module from
=========================

module Campaign is

  import xsd from <http://www.w3.org/2001/XMLSchema#>
  
end

---

(module
  name: (identifier)
  body: (module_body
    (import
      (module_import
        name: (identifier)
        source: (iri_reference)))))
