test/corpus/import_module_only.sdm
=========================
Import single module only
=========================

module corpus_test_import is

  import xsd

end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (single_import
        (module_import
          name: (identifier))))))
