test/corpus/import_module_rename.sdm
========================
Import and rename module
========================

module corpus_test_import is

  import xsd as schema

end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (single_import
        (module_import
          name: (identifier))
        rename: (identifier)))))
