test/corpus/import_module_version.sdm
=======================
Import versioned module
=======================

module corpus_test_import is

  import customer <https://example.org/v2/Customer#>

end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (module_import
        name: (identifier)
        version_uri: (iri)))))
