test/corpus/import_multiple_members.sdm
=======================
Import multiple members
=======================

module Campaign is

  import [ xsd:base xml:lang ]
  
end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (member_import
        name: (qualified_identifier
          module: (identifier)
          member: (identifier)))
      (member_import
        name: (qualified_identifier
          module: (identifier)
          member: (identifier))))))
