test/corpus/import_multiple_mixed.sdm
=====================
Import multiple mixed
=====================

module Campaign is

  import [ target xsd:base xml:lang skos ]

end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (module_import
        name: (identifier))
      (member_import
        name: (qualified_identifier
          module: (identifier)
          member: (identifier)))
      (member_import
        name: (qualified_identifier
          module: (identifier)
          member: (identifier)))
      (module_import
        name: (identifier)))))
