test/corpus/import_multiple_modules.sdm
=======================
Import multiple modules
=======================

module Campaign is

  import [ xsd skos ]

end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (import
        (module_import
          name: (identifier)))
      (import
        (module_import
          name: (identifier))))))
