test/corpus/metric_with_annotations.sdm
===================================
Metric Definition, With Annotations
===================================

module corpus_test_metrics is
  metric numberOfThings -> count is
    @skos:definition = "the number of things that have occurred"
  end
end

---

(module
  (identifier)
  (module_body
    (metric_def
      (function_def
        (function_signature
          (identifier)
          (function_type_reference
            (identifier_reference
              (identifier))))
        (annotation_only_body
          (annotation
            (annotation_property
              (identifier_reference
                (qualified_identifier
                  (identifier)
                  (identifier)))
              (value
                (simple_value
                  (string
                    (quoted_string)))))))))))
