test/corpus/module_empty_with_base.sdm
=======================
Module, empty with base
=======================

module Campaign <https://example.org/v/Campaign#> is end

---

(module
  name: (identifier)
  base: (iri)
  body: (module_body))
