test/corpus/module_empty_with_comments.sdm
===========================
Module, Empty with Comments
===========================

;;; This is a file document, using Lispy conventions.
;;; This is where you put file stuff.

;; This is a general comment that starts at the left
;; with current indentation
module Campaign is end

---

(module
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  name: (identifier)
  body: (module_body))
