test/corpus/property_def_empty.sdm
==========================
Property Definition, Empty
==========================

module corpus_test_property is
  property accountId -> unknown
end

---

    (module
      (identifier)
      (module_body
        (definition
          (property_def
            (member_def
              (identifier)
              (type_reference
                (unknown_type)))))))
